test/libsolidity/syntaxTests/storageLayoutSpecifier/type_uint_max.sol
contract at layout at type(uint).max { }
// ----
// TypeError 6396: (22-36): The base slot of the storage layout must evaluate to a rational number.
